--- a/res/layout/twitter.xml
+++ b/res/layout/twitter.xml
@@ -125,9 +125,9 @@
 				android:background="@drawable/roundededittext" 
 				android:height="100px" 
 				android:gravity="top" 
-				android:maxLength="119" 
 				android:typeface="sans" 
-				android:layout_marginRight="10px"/>
+				android:layout_marginRight="10px" 
+				android:maxLength="120"/>
 		</LinearLayout>
 		
 		<View
@@ -151,7 +151,8 @@
 				android:layout_marginLeft="10px" 
 				android:layout_marginRight="10px" 
 				android:textSize="17px" 
-				android:typeface="sans" android:text="#Singtel #ILoveDeals"/>
+				android:typeface="sans" 
+				android:text="#Singtel #ILoveDeals"/>
 		</LinearLayout>
 		
 		<View
